@@ -1,5 +1,7 @@
 AUX sdl-gfx-2.0.18-gcc43.patch 13847 RMD160 e657f3442e74efae6dbf255bd7214b3deb31433e SHA1 450972746eb8b29ede969dc335e717dcfb7d27d4 SHA256 84c6b04099a87dbcd2b241b2de44f2189c6db4932659ffc4b127a3e1899ea62a
 DIST SDL_gfx-2.0.18.tar.gz 860005 RMD160 57cb3f7b734485cc15d30e6132f63fc59d40872e SHA1 99b5728d718c852cbb0ea973285ad81fe7d6f404 SHA256 10c93d0057fa460e3b355d86cb5dc550c75ea098769ee3768d328bff96eee8a1
+DIST SDL_gfx-2.0.19.tar.gz 1223213 RMD160 354c939e4901644b80c82e7a9e5c04b93a70306b SHA1 bba39cf83e84d8e61b8078ea095cc0a96023e27f SHA256 9c7dec6e21f84f50549110691a0088ef909c30ca183828d254217f7e11470006
 EBUILD sdl-gfx-2.0.18.ebuild 1260 RMD160 31025fb38986a638a5340a909e089bec7d5aaf79 SHA1 dc9e58d8cd08d4e20f51be3e97d94de473e0e7d7 SHA256 401ec0f43e83c77982510ade232b80c1e5ccce0863930f8f53667b3df2b869c1
-MISC ChangeLog 6166 RMD160 d1ad1bcfc48df5bbe7d079b01f47bc96c2b8f4a8 SHA1 65637a8a55847bc3f9be5830614f1d3bd20c2d50 SHA256 891f39d2b130895c3b22e01170d736eb7a2bb97e25994e7753257a1de9818361
+EBUILD sdl-gfx-2.0.19.ebuild 919 RMD160 3e0f16a0d4f5ae5e7141a35b46b9497e77148387 SHA1 60c96e0808fda5e4bdf78d1f6681c835fb5ff052 SHA256 99648601c52c913998ed322f71da33d2aa3dcf3cf60874aae3936a49c47f7f94
+MISC ChangeLog 6293 RMD160 38aa99bc5ac5dd42031f95073938b693d7c1194d SHA1 948680f4ec3208284a7aa46f976a9d1595662a41 SHA256 5c147be2eed3de589fb52ad2005b40d394c726757778121b57f0e98f2e4f42e6
 MISC metadata.xml 814 RMD160 7c27f9bb809a7e8ec09ffe500a34e787dc291398 SHA1 4f47376426cd837f96b6fee6f64fb45e98bc4131 SHA256 acfaa2ee674cddffcfa2bc9efad13e427caff8ad702b2ede75f77b8ea8910427
